--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zeditor",
-  "version": "1.0.0",
-  "description": "Embeddable \"Editor\" API for contenteditable",
+  "version": "0.19.0",
+  "description": "Pluggable \"Editor\" API for contenteditable",
   "scripts": {
     "prepublish": "./build.sh"
   },
